--- a/package.json
+++ b/package.json
@@ -1,20 +1,16 @@
 {
-  "name": "rot13-app",
-  "version": "0.1.0",
+  "name": "rot13",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+    "dev": "vite dev",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "next": "^15",
-    "react": "^19",
-    "react-dom": "^19"
-  },
-  "devDependencies": {
-    "@types/node": "^22",
-    "@types/react": "^19",
-    "typescript": "^5"
+    "@sveltejs/adapter-vercel": "^6",
+    "@sveltejs/kit": "^2",
+    "svelte": "^5",
+    "vite": "^6"
   }
 }
